tests/fsharp/typecheck/sigs/neg141.bsl

neg141.fs(24,24,24,33): typecheck error FS0043: Type constraint mismatch. The type 
    ''d -> 'e'    
is not compatible with type
    ''a -> 'f'    

